fixed an issue where the stash didn't have a scrollbar when the inventory.css file was loaded before stash.css

--- a/src/client/ui/templates/stash/styles.less
+++ b/src/client/ui/templates/stash/styles.less
@@ -1,21 +1,18 @@
 @import "../../../css/colors.less";
 
 .uiStash {
-	.grid {
-		overflow-y: auto;
+	&.scrolls {
+		width: 834px;
+
+		.grid {
+			overflow-y: auto;
+			width: 825px;
+		}
 	}
 
 	.footer {
 		color: @blueB;
 		background-color: @blackC;
 		padding-bottom: 7px;
-	}
-
-	&.scrolls {
-		width: 834px;
-
-		.grid {
-			width: 825px;
-		}
 	}
 }
